--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ regex = "1.5"
 linked-list = "0.1"
 crossterm = "0.28"  
 # z3 = "0.12.1"
-rayon = "1.5"  
+rayon = "1.5" 
+reqwest = {version = "0.12" , features = ["blocking"] }
