--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-num-bigint = "0.4"
-regex = "1.5"  
+crossterm = "0.28" 
 linked-list = "0.1"
-crossterm = "0.28"  
-# z3 = "0.12.1"
-rayon = "1.5" 
-reqwest = {version = "0.12" , features = ["blocking"] }
+num-bigint = "0.4"
 # petgraph = "0.6"
+rayon = "1.5" 
+regex = "1.5"  
+reqwest = {version = "0.12" , features = ["blocking"] }
+tokio = { version = "1.42", features = ["full"] }
+# z3 = "0.12.1"
